<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_number">0</string>
    <string name="btn_order">Order</string>
    <string name="btn_min">-</string>
    <string name="btn_max">+</string>
    <string name="price">Price</string>
    <string name="price_value">$0.00</string>
    <string name="thanks_txt"></string>
</resources>
